weimaraner-vega/0.0.1/README.md
# weimaraner-vega

Generated by SUSE AI Factory

## Metadata
- **Name**: weimaraner-vega
- **Version**: 0.0.1
- **Description**: 
- **Support**: opensource
- **Tier**: certified
- **Status**: new
- **Category**: Inference

## Authors
- alessandro.festa1@suse.com (Owner)

## Stack Composition
This stack includes the following components:

- **Ollama** (ollama): Get up and running with Llama 3.2, Mistral, Gemma 2, and other large language models. (Version: )
- **vlm** (vlm):  (Version: )

## Installation
To install this stack on your Kubernetes cluster, ensure you have Helm installed and run:

```bash
helm upgrade --install weimaraner-vega ./chart -n weimaraner-vega --create-namespace
```

## Upgrade
To upgrade an existing installation with new values or a newer version of the chart:

```bash
helm upgrade weimaraner-vega ./chart -n weimaraner-vega
```

## Teardown
To remove the stack and all its components from your cluster:

```bash
helm uninstall weimaraner-vega -n weimaraner-vega
```
